--- a/css/blackjack.css
+++ b/css/blackjack.css
@@ -239,8 +239,8 @@ button:hover {
 /* Cards Styling */
 .card {
     display: inline-block;
-    width: 50px;
-    height: 70px;
+    width: 100px; /* Increased width */
+    height: 90px; /* Increased height */
     margin: 5px;
     border-radius: 8px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -252,10 +252,19 @@ button:hover {
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
 }
 
+.card-img {
+    width: 100%;
+    height: auto;
+}
+
 @media (max-width: 480px) {
     .card {
-        width: 40px;
-        height: 60px;
+        width: 50px; /* Increased width */
+        height: 75px; /* Increased height */
+    }
+    img {
+        width: 100px; /* Increased width */
+        height: 90px; /* Increased height */
     }
 }
 
